Moving to sqlite. Created queries

--- a/config.ini
+++ b/config.ini
@@ -1,40 +1,38 @@
 [main]
 scope = sprint
-db-driver = influxdb
+db-driver = sqlite
 
 [project]
 slug = tripleo-ci-board
-elements = tasks,user_stories,task_attributes,task_statuses,user_story_statuses,user_story_attributes
+elements = tasks,user_stories,snapshots
 
 [db:influxdb]
 host = localhost
 port = 8086
 database = test
 
+[db:sqlite]
+file = test.db
+
+[tasks:sqlite]
+# If you change the columns you'll need to manually alter the database
+columns = id,ref,assigned_to,assigned_to_name,is_blocked,is_closed,owner,owner_name,subject,tags,QE,Reviews,Test Req,status_name
+
+[user_stories:sqlite]
+# If you change the columns you'll need to manually alter the database
+columns = id,ref,assigned_to,owner,owner_name,tags,assigned_users,assigned_users_names,description,is_blocked,is_closed,subject,QE,DOD,Design,Dependencies,status,status_name
+
+[snapshots:sqlite]
+columns = id,name,estimated_start,estimated_finish
+
 [tasks:influxdb]
-tags = id,ref,assigned_to
-fields = status
+tags = id,ref,assigned_to,is_blocked,is_closed,owner,subject,tags,QE,Reviews,Test Req
+fields = status_name
 
 [user_stories:influxdb]
 tags = id,ref,assigned_to
-fields = status
+fields = ref
 
 [epics:influxdb]
-tags = id,ref
-fields = status
-
-[task_attributes:influxdb]
-tags = id
-fields = name
-
-[task_statuses:influxdb]
-tags = id,description
-fields = name
-
-[user_story_statuses:influxdb]
-tags = id,description
-fields = name
-
-[user_story_attributes:influxdb]
-tags = id,description
-fields = name
+tags = id,ref,status
+fields = ref
