--- a/config.ini
+++ b/config.ini
@@ -12,7 +12,7 @@ port = 8086
 database = test
 
 [db:sqlite]
-file = test.db
+file = snapshots.db
 
 [tasks:sqlite]
 # If you change the columns you'll need to manually alter the database
