Some PEP8, documentation, epic support

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,9 @@ database = test
 [db:sqlite]
 file = snapshots.db
 
+#[epics:sqlite]
+#columns = id,ref,assigned_to,assigned_to_name,is_blocked,is_closed,owner,owner_name,subject,status,status_name,Vision,Design and Planning,List of requirements,DOD,tags
+
 [tasks:sqlite]
 # If you change the columns you'll need to manually alter the database
 columns = id,ref,assigned_to,assigned_to_name,is_blocked,is_closed,owner,owner_name,subject,tags,QE,Reviews,Test Req,status_name
