--- a/tox.ini
+++ b/tox.ini
@@ -3,5 +3,9 @@
 envlist = py3
 
 [testenv]
-deps = flake8
-commands = flake8
+deps =
+    flake8
+    pylint
+commands =
+    pylint taigacli taigacli_custom_queries
+    flake8
