Added static tables, basic queries

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,8 @@ db-driver = sqlite
 
 [project]
 slug = tripleo-ci-board
-elements = tasks,user_stories,snapshots
+elements = tasks,user_stories,snapshots,users,sprints
+team = arxcruz,chandankumar,quiquell,rfolco,rlandy,sshnaidm,ssbarnea,weshayutin,kopecmartin,masandreful,gabrielecerami
 
 [db:influxdb]
 host = localhost
@@ -27,6 +28,14 @@ columns = id,ref,assigned_to,owner,owner_name,tags,assigned_users,assigned_users
 
 [snapshots:sqlite]
 columns = id,name,estimated_start,estimated_finish
+
+[sprints:sqlite]
+no-timestamp
+columns = id,name,estimated_start,estimated_finish,watchers
+
+[users:sqlite]
+no-timestamp
+columns = id,username,full_name
 
 [tasks:influxdb]
 tags = id,ref,assigned_to,is_blocked,is_closed,owner,subject,tags,QE,Reviews,Test Req
