Switched to sqlalchemy
Change-Id: Idaf23a7f84149b22f123d38b5141f3fd6c4a4f8d

--- a/config.ini
+++ b/config.ini
@@ -4,47 +4,9 @@ db-driver = sqlite
 
 [project]
 slug = tripleo-ci-board
-elements = tasks,user_stories,snapshots,users,sprints
+#elements = tasks,user_stories,snapshots,users,sprints
 team = arxcruz,chandankumar,quiquell,rfolco,rlandy,sshnaidm,ssbarnea,weshayutin,kopecmartin,masandreful,gabrielecerami
 
-[db:influxdb]
-host = localhost
-port = 8086
-database = test
+[db]
+uri = sqlite:///sa_snapshots.db
 
-[db:sqlite]
-file = snapshots.db
-
-#[epics:sqlite]
-#columns = id,ref,assigned_to,assigned_to_name,is_blocked,is_closed,owner,owner_name,subject,status,status_name,Vision,Design and Planning,List of requirements,DOD,tags
-
-[tasks:sqlite]
-# If you change the columns you'll need to manually alter the database
-columns = id,ref,assigned_to,assigned_to_name,is_blocked,is_closed,owner,owner_name,subject,tags,QE,Reviews,Test Req,status_name
-
-[user_stories:sqlite]
-# If you change the columns you'll need to manually alter the database
-columns = id,ref,assigned_to,owner,owner_name,tags,assigned_users,assigned_users_names,description,is_blocked,is_closed,subject,QE,DOD,Design,Dependencies,status,status_name
-
-[snapshots:sqlite]
-columns = id,name,estimated_start,estimated_finish
-
-[sprints:sqlite]
-no-timestamp
-columns = id,name,estimated_start,estimated_finish,watchers
-
-[users:sqlite]
-no-timestamp
-columns = id,username,full_name
-
-[tasks:influxdb]
-tags = id,ref,assigned_to,is_blocked,is_closed,owner,subject,tags,QE,Reviews,Test Req
-fields = status_name
-
-[user_stories:influxdb]
-tags = id,ref,assigned_to
-fields = ref
-
-[epics:influxdb]
-tags = id,ref,status
-fields = ref
